# units-catalog

./: .gitignore  README.md
.github/workflows/: python-ci.yml
gen_code/: pyproject.toml  unit_cat_qudt.ipynb
gen_code/data/: V1.01_unitSystems.json  V1.01_units.json  V1_defaultunits.xlsx
gen_code/src/: qudt.py  unit_dm.py  utils.py
src/: compare_external_ids.py
versions/v1/: units.json
